--- a/plugin.ini
+++ b/plugin.ini
@@ -1,10 +1,10 @@
 [info]
 name="Analytics Dimensions"
 author="Bowling Green State University Libraries"
-description="Google Analytics with dimensions for collections and exhibits."
+description="Provide analytics with dimensions for collections and exhibits."
 license="MIT"
 link="https://github.com/BGSU-LITS/omeka-plugin-AnalyticsDimensions"
 support_link="https://github.com/BGSU-LITS/omeka-plugin-AnalyticsDimensions/issues"
-omeka_minimum_version="2.3"
-omeka_target_version="2.3"
-version="1.0"
+omeka_minimum_version="3.0"
+omeka_target_version="3.0"
+version="2.0"
